Updates
update from collect to direct tolist()